# dev_team2

./: README.md  repomix-output.xml  start-advanced-backend.ps1  start-servers.ps1  tailwind.config.js
backend/: advanced_main.py  enhanced_models.py  main.py  math_engine.py  models.py  pyproject.toml  requirements-advanced.txt  requirements.txt  simulation_engine.py  test_api.py
backend/engines/: __init__.py  app_orchestrator.py  gemini_engine.py  kase.py  persona_engine.py  regulatory_engine.py  sekre.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/advanced/: page.tsx
frontend/src/app/axis/: page.tsx
frontend/src/app/coordinate/: page.tsx
frontend/src/app/crosswalk/: page.tsx
frontend/src/app/math/: page.tsx
frontend/src/app/simulation/: page.tsx
frontend/src/components/: AdvancedFeatures.tsx  navigation.tsx
frontend/src/lib/: api.ts  types.ts
instructions/: repomix-output.xml
